# AutoSuisei

./: .clang-format  .clang-tidy  .clauderules  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: claude.yml
AutoSuisei/: Accuracy-Results.md  Architecture.md  Build-and-Distribution.md  CLAUDE.md  Conventions.md  Dev-History.md  Home.md  Modules.md  OCR-and-Parser.md  Overview.md  Sticker-Digit-Model.md  changelog.md  index.md
AutoSuisei/ideas/: barcode-qr-serial.md  v1.0.0-release-and-autoupdate.md
AutoSuisei/logs/: 2026-06-26-barcode-first-serial.md  2026-06-26-fix-tls-plugin.md  2026-06-26-v1.0.0-updater-monitor.md  2026-06-27-v1.0.1-watch-multicat.md  2026-06-27-v1.0.2-watch-category-cn.md  2026-06-27-v1.0.3-review-layout-branding.md  2026-06-27-v1.0.4-review-layout-polish.md
docs/: CHAT_HISTORY_2026-05-18.md  SKILL.md  SKILLS_AUTOMATION_WORKFLOW.md  dev-plan.md  tomorrow.md
installer/: AutoPilot.iss  AutoSuisei.iss
scripts/: bulk_extract.py  compare_to_ground_truth.py  dedupe_serials.py  group_by_pc.py  make_bundle.ps1  make_installer.ps1  make_update_package.ps1  make_user_guide_pdf.py  ocr_debug.py  ocr_paddle.py  ocr_worker.py  setup_embedded_python.ps1  sticker_digit.py  test_donate_parser.py  validate_pc_range.py
scripts/train/: synth_stickers.py  train_digit.py
src/cli/: CMakeLists.txt  main.cpp
src/core/: Action.h  CMakeLists.txt  Macro.h  SpscRingBuffer.h
src/gui/: AutoPilot.rc  AutoSuisei.rc  CMakeLists.txt  ImageTab.cpp  ImageTab.h  MacrosTab.cpp  MacrosTab.h  MainWindow.cpp  MainWindow.h  OcrTab.cpp  OcrTab.h  ReviewTab.cpp  ReviewTab.h  SidebarNav.cpp  SidebarNav.h  Updater.cpp  Updater.h  VersionCompare.h  WatchTab.cpp  WatchTab.h  WebTab.cpp  WebTab.h  main.cpp  resources.qrc  theme.qss
src/ocr/: AssetExtractor.cpp  AssetExtractor.h  CMakeLists.txt  OcrEngine.cpp  OcrEngine.h  OcrFormatter.cpp  OcrFormatter.h  ReviewModel.cpp  ReviewModel.h
src/player/: CMakeLists.txt  IPlayer.h  WindowsPlayer.cpp  WindowsPlayer.h
src/recorder/: CMakeLists.txt  IRecorder.h  WindowsRecorder.cpp  WindowsRecorder.h
src/scripting/: CMakeLists.txt  LuaSandbox.cpp  LuaSandbox.h
src/storage/: CMakeLists.txt  IMacroRepository.h  IOcrResultRepository.h  MacroSerializer.cpp  MacroSerializer.h  SqliteMacroRepository.cpp  SqliteMacroRepository.h  SqliteOcrResultRepository.cpp  SqliteOcrResultRepository.h
src/vision/: CMakeLists.txt  ImageMatcher.cpp  ImageMatcher.h
src/web/: BrowserEvent.cpp  BrowserEvent.h  BrowserRecorderScript.cpp  BrowserRecorderScript.h  CMakeLists.txt  CdpClient.cpp  CdpClient.h  CdpMessage.cpp  CdpMessage.h  CdpRecorder.cpp  CdpRecorder.h  ICdpClient.h  WebPlayer.cpp  WebPlayer.h
tests/: CMakeLists.txt  test_main.cpp
tests/core/: test_action.cpp
tests/data/: README.md
tests/gui/: test_version_compare.cpp
tests/ocr/: test_asset_extractor.cpp  test_ocr_engine.cpp  test_ocr_formatter.cpp  test_review_model.cpp
tests/scripting/: test_lua_sandbox.cpp
tests/storage/: test_macro_repository.cpp  test_macro_serializer.cpp  test_ocr_result_repository.cpp
tests/vision/: test_image_matcher.cpp
tests/web/: test_browser_event.cpp  test_cdp_message.cpp
